force-app/main/default/objects/Integration_Attempt__c/Integration_Attempt__c.object-meta.xml
<CustomObject>
    <label>Integration Attempt</label>
    <pluralLabel>Integration Attempts</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Integration Attempt Number</label>
        <displayFormat>ATT-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>