force-app/main/default/objects/Integration_Attempt__c/fields/Integration_Event__c.field-meta.xml
<CustomField>
    <fullName>Integration_Event__c</fullName>
    <label>Integration Event</label>
    <referenceTo>Integration_Event__c</referenceTo>
    <relationshipLabel>Integration Attempts</relationshipLabel>
    <relationshipName>Integration_Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>